--- a/Tasks/Challenge-1.yaml
+++ b/Tasks/Challenge-1.yaml
@@ -206,7 +206,7 @@ Resources:
   ALB1: # Internet Facing LB
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Scheme: internet
+      Scheme: internet-facing
       LoadBalancerAttributes:
         - Key: idle_timeout.timeout_seconds
           Value: '30'
@@ -217,7 +217,7 @@ Resources:
   ALB2: # Internal Facing LB
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Scheme: internet
+      Scheme: internal
       LoadBalancerAttributes:
         - Key: idle_timeout.timeout_seconds
           Value: '30'
@@ -225,7 +225,7 @@ Resources:
         - !Ref PrivateSubnet1
         - !Ref PrivateSubnet2
       SecurityGroups: [!Ref 'ElbSecurityGroup1']
-  ALBListener1: #For Internet Facing LB
+  ALBListener1:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
@@ -246,7 +246,7 @@ Resources:
         Values: [/]
       ListenerArn: !Ref 'ALBListener1'
       Priority: 1
-  ALBListener2: #For Internal Facing LB
+  ALBListener2:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
